K8S/eshopping_helm_repo/templates/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv  
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:  
  ingressClassName: nginx
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/order
            pathType: Prefix
            backend:
              service:
                name: orchestrator-clusterip-srv
                port:
                  number: 80
          - path: /api/security
            pathType: Prefix
            backend:
              service:
                name: orchestrator-clusterip-srv
                port:
                  number: 80
          - path: /api/shippingitem
            pathType: Prefix
            backend:
              service:
                name: orchestrator-clusterip-srv
                port:
                  number: 80
          - path: /api/shoppingcart
            pathType: Prefix
            backend:
              service:
                name: invshoprev-orchestrator-clusterip-srv
                port:
                  number: 80
          - path: /api/review
            pathType: Prefix
            backend:
              service:
                name: invshoprev-orchestrator-clusterip-srv
                port:
                  number: 80
          - path: /api/inventory
            pathType: Prefix
            backend:
              service:
                name: invshoprev-orchestrator-clusterip-srv
                port:
                  number: 80
          - path: /kafka-dashboard
            pathType: Prefix
            backend:
              service:
                name: kafka-ui-clusterip-service
                port:
                  number: 8080
